Register page design

--- a/views/partials/home-header.ejs
+++ b/views/partials/home-header.ejs
@@ -48,7 +48,7 @@
                 <a class="btn btn-light btn-lg login" role="button" href="/login">Login</a>
               </div>
               <div class="col-lg-6">
-                <a class="btn btn-outline-light btn-lg register" role="button" href="">Register</a>
+                <a class="btn btn-outline-light btn-lg register" role="button" href="/register">Register</a>
               </div>
             </div>
           </nav>  
