--- a/views/login.ejs
+++ b/views/login.ejs
@@ -8,10 +8,10 @@
         <p class="login-description">Welcome back! Login with your data that you entered during registration.</p>
         <form action="/login" method="post">
           <h4 class="login-labels">Email*</h4>
-          <input class="login-textbox" type="text" name="email"></input>
+          <input class="login-textbox" type="email" name="username"></input>
           <h4 class="login-labels">Password*</h4>
           <input class="login-textbox" type="password" name="password"></input><br>      
-          <button type="button" class="btn btn-outline-light btn-lg login-button">Login</button>
+          <button type="submit" class="btn btn-outline-light btn-lg login-button">Login</button>
         </form>        
         <p class="login-labels">Not registered yet? <a href="/register">Create an account</a></p>           
         <div class="login-or">
