--- a/views/partials/dashboard-header.ejs
+++ b/views/partials/dashboard-header.ejs
@@ -51,7 +51,7 @@
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <a class="dropdown-item" href="#">Profile</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" href="/">Sign Out</a>
+                    <a class="dropdown-item" href="/logout">Sign Out</a>
                 </div>
             </div>
           </nav>  
