--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,25 +9,27 @@
         <h4 class="register-description">Share the photos with your client in one click!</h4>
         <a class="btn btn-primary btn-lg btn-block register-button" href="#!" role="button">
           <i class="fab fa-google"></i><span style="padding-left: 15px;">Join with Google</span>
-        </a>           
+        </a>       
         <p>OR</p>          
-        <div class="row">
-          <div class="col-lg-6 textbox-col">
-            <input type="text" class="textbox register-fname" name="fname" placeholder="First Name" required="True"/>
-          </div>
-          <div class="col-lg-6 textbox-col">
-            <input type="text" class="textbox register-lname" name="fname" placeholder="Last Name" required="True" />
-          </div>
-          <div class="col-lg-12 textbox-col">
-            <input type="text" class="textbox register-email" name="email" placeholder="Email" required="True" />
-          </div>
-          <div class="col-lg-12 textbox-col">
-            <input type="text" class="textbox register-password" name="password" placeholder="Password" required="True" />
-          </div>
-          <div class="col-lg-12">
-            <button type="button" class="btn btn-outline-light btn-lg register-button">Create New Account</button>
-          </div>
-        </div>   
+        <form action="/register" method="post">
+          <div class="row">
+            <div class="col-lg-6 textbox-col">
+              <input type="text" class="textbox register-fname" name="fname" placeholder="First Name" required="True"/>
+            </div>
+            <div class="col-lg-6 textbox-col">
+              <input type="text" class="textbox register-lname" name="lname" placeholder="Last Name" required="True" />
+            </div>
+            <div class="col-lg-12 textbox-col">
+              <input type="email" class="textbox register-email" name="username" placeholder="Email" required="True" />
+            </div>
+            <div class="col-lg-12 textbox-col">
+              <input type="password" class="textbox register-password" name="password" placeholder="Password" required="True" />
+            </div>
+            <div class="col-lg-12">
+              <button type="submit" class="btn btn-outline-light btn-lg register-button">Create New Account</button>
+            </div>
+          </div> 
+        </form>  
       </div>
     </div>
     <div class="col-lg-4">
