Authentication with Google API

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -18,7 +18,7 @@
             <hr class="hr-or">
             <span class="span-or">OR</span>
         </div>
-        <a class="btn btn-primary btn-lg btn-block login-button" href="#!" role="button">
+        <a class="btn btn-primary btn-lg btn-block login-button" href="/auth/google" role="button">
           <i class="fab fa-google"></i><span style="padding-left: 15px;">Continue with Google</span>
         </a>  
       </div>            
