--- a/views/register.ejs
+++ b/views/register.ejs
@@ -7,7 +7,7 @@
         <h2 class="register-heading">Join our community</h2>
         <h4 class="register-description">Take your photography to the next level</h4>
         <h4 class="register-description">Share the photos with your client in one click!</h4>
-        <a class="btn btn-primary btn-lg btn-block register-button" href="#!" role="button">
+        <a class="btn btn-primary btn-lg btn-block register-button" href="/auth/google" role="button">
           <i class="fab fa-google"></i><span style="padding-left: 15px;">Join with Google</span>
         </a>       
         <p>OR</p>          
