--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,4 +1,9 @@
 <%- include("partials/dashboard-header"); -%>
 
+        <section id="main">
+            <div class="container-fluid">
+                <h3>Welcome <%= displayName %>, </h3>
+            </div>
+        </section>
     </body>
 </html>
