--- a/views/partials/dashboard-header.ejs
+++ b/views/partials/dashboard-header.ejs
@@ -35,7 +35,7 @@
                   <a class="nav-link" href="/dashboard">DASHBOARD</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/users">USERS</a>
+                  <a class="nav-link" href="/clients">CLIENTS</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/messages">MESSAGES</a>
