--- a/views/photos.ejs
+++ b/views/photos.ejs
@@ -1,15 +1,127 @@
 <%- include("partials/dashboard-header"); -%>
 
-    <section id="photos1">
+    <section id="photosSection">
         <div class="container-fluid">
             <h3>Photos for <%= clientInfo.name %> </h3>
             <br>
-            <label>Select photos:</label>
-            <br>
-            <form action="/upload" method="post" enctype="multipart/form-data">                
-                <input type="file" name="upload" multiple>
-                <button type="submit" class="btn btn-dark">Submit</button>
-            </form>
+            
+            <% if(photos != null && photos.length > 0) { %>
+                <div class="card-columns" data-toggle="modal" data-target="#photosModal">
+                    <div class="form-check">
+                        <% for (let index = 0; index < photos.length; index++) { %> 
+                            <% let photo = photos[index]; %>
+                            <div class="card">
+                                <div class="card-body card-image-body">
+                                    <div class="bg-image hover-overlay ripple shadow-1-strong rounded">
+                                        <img src= <%= photo.url %> class="card-img-top" alt="Client Image" data-target="#photoCarousel" data-slide-to= <%= index.toString(); %>/>
+                                        <a href="#!" data-mdb-toggle="modal" data-mdb-target="#photosModal1">
+                                            <div class="mask" style="background-color: rgba(251, 251, 251, 0.2);"></div>
+                                        </a>
+                                        <div class="card-img-overlay">
+                                            <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                            <div class="dropdown show options">
+                                                <a class="test" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                    <i class="fas fa-ellipsis-v"></i>
+                                                </a>
+                                                
+                                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                                    <a class="dropdown-item" href="#">Delete</a>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>                            
+                        <% } %>                  
+                    </div>
+                </div>
+                
+                <!-- Corousal: Displaying Images in Corousal to user to get more visibilty of images -->
+                <div class="modal fade" id="photosModal" tabindex="-1" role="dialog" aria-hidden="true">
+                    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+                    <div class="modal-content">
+                        <div class="modal-body">
+                        <div id="photoCarousel" class="carousel slide" data-ride="carousel">
+                            <ol class="carousel-indicators">
+                                <% for (let index = 0; index < photos.length; index++) { %>
+                                    <li data-target="#photoCarousel" data-slide-to= <%= index.toString(); %>>></li>
+                                 <%}%>
+                            </ol>
+                            <div class="carousel-inner">
+                                <div class="carousel-item active">
+                                    <img class="d-block w-100" src=<%= photos[0].url %> alt="slide image">
+                                </div>
+
+                                <% for (let index = 1; index < photos.length; index++) { %>
+                                    <% let photo = photos[index]; %>
+                                    <div class="carousel-item">
+                                        <img class="d-block w-100" src=<%= photo.url %> alt="slide image">
+                                    </div>
+                                 <%}%>                            
+                            </div>
+                            <a class="carousel-control-prev" href="#photoCarousel" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                            </a>
+                            <a class="carousel-control-next" href="#photoCarousel" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                            </a>
+                        </div>
+                        </div>
+                        <!-- <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        </div> -->
+                    </div>
+                    </div>
+                </div>
+                
+                
+                <!-- Custom Styling Toggle. For demo purposes only. -->
+                <div class="switch-wrap">
+                    <label class="switch">
+                    <input type="checkbox" id="styleSwitch" onclick="switchStyle();">
+                    <span class="slider round"></span>
+                    </label>
+                </div>            
+            <%}%>  
+        </div>
+        
+     <section id="addPhotos">
+        <div class="container-fluid">       
+            <div class="row" style="padding-top: 30px;">
+                <div class="col-lg-6 addPhoto">
+                    <a class="btn btn-dark btn-lg" data-toggle="modal" data-target="#browsePhotos" role="button"><i class="far fa-plus-square"></i> Add Photos</a>
+                        
+                    <div class="modal fade" id="browsePhotos" tabindex="-1" role="dialog" aria-hidden="true">
+                        <div class="modal-dialog  modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                            <h5 class="modal-title">Select Photos: </h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                            </div>
+                            <% var url = "/" + clientInfo.id + "/upload"; %>              
+                            <form action=<%= url %> method="post" enctype="multipart/form-data"> 
+                                <div class="modal-body">
+                                    <div class="form-row">
+                                        <input type="file" name="upload" multiple>
+                                    </div>                                         
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
+                                    <button type="submit" class="btn btn-dark">Upload</button>
+                                </div>
+                            </form>
+                        </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-6">
+                    <a class="btn btn-light btn-lg" role="button" href=""><i class="fas fa-trash"></i>Share photos</a>
+                </div>
+            </div>
         </div>
     </section>
 </body>
