--- a/views/partials/dashboard-header.ejs
+++ b/views/partials/dashboard-header.ejs
@@ -38,7 +38,7 @@
                   <a class="nav-link" href="/clients">CLIENTS</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="/messages">MESSAGES</a>
+                  <a class="nav-link" href="/messages/unread">MESSAGES</a>
                 </li>
               </ul>
             </div>
