--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -1,3 +1,8 @@
+ @font-face { 
+  font-family: 'Gallient';
+  src: url('fonts/GallientRegular-eZoMp.woff') format('woff');
+  }
+
  body {   
   background-color: #EEEEEE;
  }
@@ -278,4 +283,17 @@
     width: 100%; 
     display: table-cell;
     vertical-align: middle;
+  }
+
+/* Change password */
+
+  #changepassword .container-fluid {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 150px;
+  }
+
+  #changepassword .password {
+    width: 100%;
   }
