--- a/views/partials/dashboard-header.ejs
+++ b/views/partials/dashboard-header.ejs
@@ -51,6 +51,10 @@
                 <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <a class="dropdown-item" href="/profile">Profile</a>
                     <div class="dropdown-divider"></div>
+                    <% if(!googleUser) {%>
+                      <a class="dropdown-item" href="/changepassword">Change Password</a>
+                      <div class="dropdown-divider"></div>
+                    <% } %>
                     <a class="dropdown-item" href="/logout">Sign Out</a>
                 </div>
             </div>
