--- a/views/changepassword.ejs
+++ b/views/changepassword.ejs
@@ -10,7 +10,7 @@
     
                         <div class="card-body form-control">
                             <% if(error) {%>
-                                <span style="color: red;" id="error1"><%= error %></span>
+                                <span style="color: red;"><%= error %></span>
                             <% } %>
                             <div class="row">
                                 <div class="col-lg-12" style="margin-bottom: 10px;">
