--- a/views/photos.ejs
+++ b/views/photos.ejs
@@ -106,7 +106,11 @@
                 </div>
                 <div class="col-lg-6">
                     <% var url = "/" + clientInfo.id + "/photos/send"; %>
-                    <a class="btn btn-light btn-lg" role="button" href="<%= url %>"><i class="fas fa-share-square"></i>&nbsp; Send photos</a>
+                    <% if(photos != null && photos.length > 0) {%>
+                        <a class="btn btn-light btn-lg" role="button" href="<%= url %>"><i class="fas fa-share-square"></i>&nbsp; Send photos</a>
+                    <% } else { %>
+                        <a class="btn btn-light btn-lg disabled" role="button" href="<%= url %>"><i class="fas fa-share-square"></i>&nbsp; Send photos</a>
+                    <% } %>
                 </div>
             </div>
         </div>
