--- a/views/photos.ejs
+++ b/views/photos.ejs
@@ -2,118 +2,143 @@
 
     <section id="photosSection">
         <div class="container-fluid">
-            <h3>Photos for <%= clientInfo.name %> </h3>
-            <br>
+            <% if(success) { %>
+                <div class="d-flex justify-content-center">                    
+                    <div class="alert alert-success alert-dismissible fade show" role="alert" style="width: 250px; text-align: center;">
+                        <strong><%= success %></strong>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                    </div>
+                </div>
+            <% } %>
+            <% if(failure) { %>
+                <div class="d-flex justify-content-center">                    
+                    <div class="alert alert-danger alert-dismissible fade show" role="alert" style="width: 300px;">
+                        <strong><%= failure %></strong>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                          </button>
+                    </div>
+                </div>
+            <% } %>
             
-            <% if(photos != null && photos.length > 0) { %>
-                <div class="row row-cols-1 row-cols-md-2" data-toggle="modal" data-target="#photosModal">                   
-                    <% for (let index = 0; index < photos.length; index++) { %> 
-                        <% let photo = photos[index]; %>
-                        <div class="col-lg-2 mb-4">
-                            <div class="card">
-                                <div class="card-body">
-                                    <img src= <%= photo.url %> class="card-img-top" alt="Client Image" data-target="#photoCarousel" data-slide-to= <%= index.toString(); %>/>
-                                    <div class="card-img-overlay">
-                                        <div class="dropdown show options">
-                                            <a class="test" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                                <i class="fas fa-ellipsis-v"></i>
-                                            </a>
-                                            
-                                            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                                <a class="dropdown-item" href="#">Delete</a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div> 
-                        </div>                           
-                    <% } %>  
-                </div>
+            <% if(clientInfo) { %>
+                <h3>Photos for <%= clientInfo.name %> </h3>
+                <br>
                 
-                <!-- Corousal: Displaying Images in Corousal to user to get more visibilty of images -->
-                <div class="modal fade" id="photosModal" tabindex="-1" role="dialog" aria-hidden="true">
-                    <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
-                    <div class="modal-content">
-                        <div class="modal-body">
-                        <div id="photoCarousel" class="carousel slide" data-ride="carousel">
-                            <ol class="carousel-indicators">
-                                <% for (let index = 0; index < photos.length; index++) { %>
-                                    <li data-target="#photoCarousel" data-slide-to= <%= index.toString(); %>>></li>
-                                 <%}%>
-                            </ol>
-                            <div class="carousel-inner">
-                                <div class="carousel-item active">
-                                    <img class="d-block w-100" src=<%= photos[0].url %> alt="slide image">
-                                </div>
-
-                                <% for (let index = 1; index < photos.length; index++) { %>
-                                    <% let photo = photos[index]; %>
-                                    <div class="carousel-item">
-                                        <img class="d-block w-100" src=<%= photo.url %> alt="slide image">
+                <% if(photos != null && photos.length > 0) { %>
+                    <div class="row row-cols-1 row-cols-md-2" data-toggle="modal" data-target="#photosModal">                   
+                        <% for (let index = 0; index < photos.length; index++) { %> 
+                            <% let photo = photos[index]; %>
+                            <div class="col-lg-2 mb-4">
+                                <div class="card">
+                                    <div class="card-body">
+                                        <img src= <%= photo.url %> class="card-img-top" alt="Client Image" data-target="#photoCarousel" data-slide-to= <%= index.toString(); %>/>
+                                        <!-- <div class="card-img-overlay">
+                                            <div class="dropdown show options">
+                                                <a class="test" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                                    <i class="fas fa-ellipsis-v"></i>
+                                                </a>
+                                                
+                                                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                                    <a class="dropdown-item" href="#">Delete</a>
+                                                </div>
+                                            </div>
+                                        </div> -->
                                     </div>
-                                 <%}%>                            
+                                </div> 
+                            </div>                           
+                        <% } %>  
+                    </div>
+                    
+                    <!-- Corousal: Displaying Images in Corousal to user to get more visibilty of images -->
+                    <div class="modal fade" id="photosModal" tabindex="-1" role="dialog" aria-hidden="true">
+                        <div class="modal-dialog modal-lg modal-dialog-centered" role="document">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                            <div id="photoCarousel" class="carousel slide" data-ride="carousel">
+                                <ol class="carousel-indicators">
+                                    <% for (let index = 0; index < photos.length; index++) { %>
+                                        <li data-target="#photoCarousel" data-slide-to= <%= index.toString(); %>>></li>
+                                    <%}%>
+                                </ol>
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img class="d-block w-100" src=<%= photos[0].url %> alt="slide image">
+                                    </div>
+
+                                    <% for (let index = 1; index < photos.length; index++) { %>
+                                        <% let photo = photos[index]; %>
+                                        <div class="carousel-item">
+                                            <img class="d-block w-100" src=<%= photo.url %> alt="slide image">
+                                        </div>
+                                    <%}%>                            
+                                </div>
+                                <a class="carousel-control-prev" href="#photoCarousel" role="button" data-slide="prev">
+                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Previous</span>
+                                </a>
+                                <a class="carousel-control-next" href="#photoCarousel" role="button" data-slide="next">
+                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                <span class="sr-only">Next</span>
+                                </a>
                             </div>
-                            <a class="carousel-control-prev" href="#photoCarousel" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                            </a>
-                            <a class="carousel-control-next" href="#photoCarousel" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                            </a>
+                            </div>
+                            <!-- <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            </div> -->
                         </div>
                         </div>
-                        <!-- <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                        </div> -->
                     </div>
-                    </div>
-                </div>
-            <%}%>  
+                <%}%> 
+            <%}%> 
         </div>
     </section>
 
-     <section id="addPhotos">
-        <div class="container-fluid">       
-            <div class="row" style="padding-top: 30px;">
-                <div class="col-lg-6 addPhoto">
-                    <a class="btn btn-dark btn-lg" data-toggle="modal" data-target="#browsePhotos" role="button"><i class="far fa-plus-square"></i>&nbsp; Add Photos</a>
-                        
-                    <div class="modal fade" id="browsePhotos" tabindex="-1" role="dialog" aria-hidden="true">
-                        <div class="modal-dialog  modal-dialog-centered" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title">Select Photos: </h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
+    <% if(clientInfo) { %>
+        <section id="addPhotos">
+            <div class="container-fluid">       
+                <div class="row" style="padding-top: 30px;">
+                    <div class="col-lg-6 addPhoto">
+                        <a class="btn btn-dark btn-lg" data-toggle="modal" data-target="#browsePhotos" role="button"><i class="far fa-plus-square"></i>&nbsp; Add Photos</a>
+                            
+                        <div class="modal fade" id="browsePhotos" tabindex="-1" role="dialog" aria-hidden="true">
+                            <div class="modal-dialog  modal-dialog-centered" role="document">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                    <h5 class="modal-title">Select Photos: </h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <% var url = "/" + clientInfo.id + "/photos"; %>              
+                                <form method="post" enctype="multipart/form-data" action="<%= url %>" > 
+                                    <div class="modal-body">
+                                        <div class="form-row">
+                                            <input type="file" name="uploads" multiple>
+                                        </div>                                         
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
+                                        <button type="submit" class="btn btn-dark">Upload</button>
+                                    </div>
+                                </form>
                             </div>
-                            <% var url = "/" + clientInfo.id + "/photos"; %>              
-                            <form method="post" enctype="multipart/form-data" action="<%= url %>" > 
-                                <div class="modal-body">
-                                    <div class="form-row">
-                                        <input type="file" name="uploads" multiple>
-                                    </div>                                         
-                                </div>
-                                <div class="modal-footer">
-                                    <button type="button" class="btn btn-light" data-dismiss="modal">Close</button>
-                                    <button type="submit" class="btn btn-dark">Upload</button>
-                                </div>
-                            </form>
-                        </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-6">
-                    <% var url = "/" + clientInfo.id + "/photos/send"; %>
-                    <% if(photos != null && photos.length > 0) {%>
-                        <a class="btn btn-light btn-lg" role="button" href="<%= url %>"><i class="fas fa-share-square"></i>&nbsp; Send photos</a>
-                    <% } else { %>
-                        <a class="btn btn-light btn-lg disabled" role="button" href="<%= url %>"><i class="fas fa-share-square"></i>&nbsp; Send photos</a>
-                    <% } %>
+                    <div class="col-lg-6">
+                        <% var url = "/" + clientInfo.id + "/photos/send"; %>
+                        <% if(photos != null && photos.length > 0) {%>
+                            <a class="btn btn-light btn-lg" role="button" href="<%= url %>"><i class="fas fa-share-square"></i>&nbsp; Send photos</a>
+                        <% } else { %>
+                            <a class="btn btn-light btn-lg disabled" role="button" href="<%= url %>"><i class="fas fa-share-square"></i>&nbsp; Send photos</a>
+                        <% } %>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    <% } %>
 </body>
 </html>   
